--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,30 @@ server.port=8901
 #server.context-path=demo
 logging.level.com.epoch=debug
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/console_dev?serverTimezone=GMT%2B8&useSSL=false&useUnicode=true&characterEncoding=utf-8
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/console_dev?serverTimezone=GMT%2B8&useSSL=false&useUnicode=true&characterEncoding=utf-8
+#spring.datasource.username=root
+#spring.datasource.password=123456
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-## Mybatis ≈‰÷√
+spring.datasource.dynamic.primary=master
+spring.datasource.dynamic.p6spy=true
+spring.datasource.dynamic.datasource.master.username=root
+spring.datasource.dynamic.datasource.master.password=123456
+spring.datasource.dynamic.datasource.master.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.dynamic.datasource.master.url=jdbc:mysql://127.0.0.1:3306/console_dev?serverTimezone=GMT%2B8&useSSL=false&useUnicode=true&characterEncoding=utf-8
+
+spring.datasource.dynamic.datasource.slave_1.username=root
+spring.datasource.dynamic.datasource.slave_1.password=123456
+spring.datasource.dynamic.datasource.slave_1.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.dynamic.datasource.slave_1.url=jdbc:mysql://127.0.0.1:3306/console_dev?serverTimezone=GMT%2B8&useSSL=false&useUnicode=true&characterEncoding=utf-8
+
+spring.datasource.dynamic.datasource.slave_2.username=root
+spring.datasource.dynamic.datasource.slave_2.password=123456
+spring.datasource.dynamic.datasource.slave_2.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.dynamic.datasource.slave_2.url=jdbc:mysql://127.0.0.1:3306/console_dev?serverTimezone=GMT%2B8&useSSL=false&useUnicode=true&characterEncoding=utf-8
+
+
+## Mybatis
 mybatis.typeAliasesPackage=com.epoch.demo.model
 mybatis.mapperLocations=classpath:mapper/*.xml
 
